--- a/.canon.yaml
+++ b/.canon.yaml
@@ -1,5 +1,5 @@
 # This file provides project-level configuration for the canon dev environment utility. https://github.com/viamrobotics/canon
-MODULE:
+bosch:
     default: true
     image_amd64: ghcr.io/viamrobotics/antique2:amd64-cache
     image_arm64: ghcr.io/viamrobotics/antique2:arm64-cache
