--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,14 +10,12 @@ jobs:
     strategy:
       matrix:
         include:
-          - platform: linux/amd64
-            runner: ubuntu-latest
-            target_os: linux
-            target_arch: amd64
-          - platform: linux/arm64
-            runner: buildjet-8vcpu-ubuntu-2204-arm
-            target_os: linux
-            target_arch: arm64
+          - arch: buildjet-8vcpu-ubuntu-2204
+            image: ghcr.io/viamrobotics/rdk-devenv:amd64-cache
+            platform: linux/amd64
+          - arch: buildjet-8vcpu-ubuntu-2204-arm
+            image: ghcr.io/viamrobotics/rdk-devenv:arm64-cache
+            platform: linux/arm64
     runs-on: ${{ matrix.arch }}
     container:
       image: ${{ matrix.image }}
