--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,47 +6,32 @@ on:
 
 jobs:
   build_and_test:
-    name: Build and Test
     strategy:
       matrix:
         include:
-          - arch: buildjet-8vcpu-ubuntu-2204
+          - arch: ubuntu-latest
             image: ghcr.io/viamrobotics/rdk-devenv:amd64-cache
             platform: linux/amd64
-          - arch: buildjet-8vcpu-ubuntu-2204-arm
+            label: amd64
+          - arch: ubuntu-small-arm
             image: ghcr.io/viamrobotics/rdk-devenv:arm64-cache
             platform: linux/arm64
+            label: arm64
     runs-on: ${{ matrix.arch }}
     container:
       image: ${{ matrix.image }}
-      options: --platform ${{ matrix.platform }}
     timeout-minutes: 45
     steps:
-
-    - name: Set PR Number variable
-      run: |
-        echo "PR_NUMBER=${{ github.event.pull_request.number }}" >> pr.env
-
-    - name: Upload PR variables
-      uses: actions/upload-artifact@v3
-      with:
-        name: pr-variables
-        path: |
-         pr.env
-        retention-days: 1
 
     - name: Check out main branch code
       if: github.event_name != 'pull_request_target'
       uses: actions/checkout@v3
-      with:
-        submodules: recursive
 
     - name: Check out PR branch code
       if: github.event_name == 'pull_request_target'
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.pull_request.head.sha }}
-        submodules: recursive
 
     - name: apt update
       run: |
@@ -57,8 +42,7 @@ jobs:
         git init
         git add .
         chown -R testbot:testbot .
-        sudo -u testbot bash -lc 'sudo apt-get install -y clang-format && make lint'
-        GEN_DIFF=$(git status -s --ignore-submodules)
+        sudo -u testbot bash -lc 'make lint'
 
         if [ -n "$GEN_DIFF" ]; then
             echo '"make lint" resulted in changes not in git' 1>&2
@@ -69,11 +53,3 @@ jobs:
     - name: make build
       run: |
         sudo -u testbot bash -lc 'make build'
-
-    - name: make install
-      run: |
-        sudo -u testbot bash -lc 'make tool-install'
-
-    - name: make test
-      run: |
-        sudo -u testbot bash -lc 'make test'
